force-app/main/objects/Analytics_Trial_Task__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Actionable_Link__c</fullName>
        <label>Actionable Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Order__c</fullName>
        <label>Task Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Title__c</fullName>
        <label>Task Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Analytics Trial Task</label>
</CustomObject>